--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "starwars",
-  "password": "starwars",
+  "username": "postgres",
+  "password": "postgres",
   "database": "starwars",
   "schema": "public",
   "entities": ["dist/**/*.entity.js"],
